Add a Design doc for sdk

--- a/packages/formstr-app/.eslintrc
+++ b/packages/formstr-app/.eslintrc
@@ -3,5 +3,5 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "ignorePatterns": ["**/*.js"]
+  "ignorePatterns": ["**/*.js", "**/*.jsx"]
 }
